Added logo to top of page.

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,8 @@
 <body>
     <div class="all">
         <div class="header">
-            <img scr="/logo.jpg" />
+            <!-- <img scr="/logo.jpg" /> -->
+            <div class='png-element logo'></div>
             <div class="shop">Shop Now</div>
         </div>
         <div class="banner-wrapper">
