Updated 'Shop Now' & '>' at top of page. (needs CJ's Rollover Design)

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
         <div class="header">
             <!-- <img scr="/logo.jpg" /> -->
             <div class='png-element logo'></div>
-            <div class="shop">Shop Now</div>
+            <div class="shop">Shop Now<img class='shop-arrow' src='./banner/img/cta-alt-icon@2x.png'/></div>
         </div>
         <div class="banner-wrapper">
             <div class="banner stage">
