fixed image issue with yellow snow.

--- a/src/index.html
+++ b/src/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="x-ua-compatible" content="IE=Edge" />
     <title>Troybilt</title>
 </head>
 
@@ -12,7 +13,7 @@
         <div class="header">
             <!-- <img scr="/logo.jpg" /> -->
             <div class='png-element logo'></div>
-            <div class="shop">Shop Now<img class='shop-arrow' src='./banner/img/cta-alt-icon@2x.png'/></div>
+            <div class="shop">Shop Now<img class='shop-arrow' src='./banner/img/cta-alt-icon@2x.png' /></div>
         </div>
         <div class="banner-wrapper">
             <div class="banner stage">
@@ -190,8 +191,10 @@
         </div>
         <div class="foot">© 2020 Troy-Bilt LLC<span>|</span>Privacy Policy</div>
     </div>
-    <script type="text/javascript" src="https://s0.2mdn.net/ads/studio/cached_libs/createjs_2015.11.26_54e1c3722102182bb133912ad4442e19_min.js"></script>
-    <script type="text/javascript" src="https://s0.2mdn.net/ads/studio/cached_libs/tweenmax_1.19.0_643d6911392a3398cb1607993edabfa7_min.js"></script>
+    <script type="text/javascript"
+        src="https://s0.2mdn.net/ads/studio/cached_libs/createjs_2015.11.26_54e1c3722102182bb133912ad4442e19_min.js"></script>
+    <script type="text/javascript"
+        src="https://s0.2mdn.net/ads/studio/cached_libs/tweenmax_1.19.0_643d6911392a3398cb1607993edabfa7_min.js"></script>
     <script src='./index.js'></script>
     <script src='./banner/animation.min.js'></script>
 
