Added privacy policy link and styling to web bottom of page.

--- a/src/index.html
+++ b/src/index.html
@@ -189,7 +189,7 @@
                 </div>
             </div>
         </div>
-        <div class="foot">© 2020 Troy-Bilt LLC<span>|</span>Privacy Policy</div>
+        <div class="foot">© 2021 Troy-Bilt LLC<span>|</span><a class='ppolicy' href='https://www.troybilt.com/en_US/privacy-policy.html' target='_blank'>Privacy Policy</a></div>
     </div>
     <script type="text/javascript"
         src="https://s0.2mdn.net/ads/studio/cached_libs/createjs_2015.11.26_54e1c3722102182bb133912ad4442e19_min.js"></script>
