Bufixes and tweaks.

--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,8 @@
         <div class="header">
             <!-- <img scr="/logo.jpg" /> -->
             <div class='png-element logo'></div>
-            <div class="shop">Shop Now<img class='shop-arrow' src='./banner/img/cta-alt-icon@2x.png' /></div>
+            <a href="https://www.troybilt.com/en_US/snow-blowers" class="shop">Shop Now<img class='shop-arrow'
+                    src='./banner/img/cta-alt-icon@2x.png' /></a>
         </div>
         <div class="banner-wrapper">
             <div class="banner stage">
