Forcing black background + added new html

--- a/src/index.html
+++ b/src/index.html
@@ -201,8 +201,11 @@
                         <div class='float products-navigation'>
                             <!-- GENERATED DYNAMICALLY -->
                         </div>
-                        <div class='png-element end-text-browse'></div>
+                        <!-- <div class='png-element end-text-browse'></div> -->
                         <div class='png-element product-message'></div>
+                        <div class='float cta2-button button'>
+                            <div class='png-element cta2'></div>
+                        </div>
                     </div>
                 </div>
             </div>
